--- a/batanta.html
+++ b/batanta.html
@@ -280,7 +280,19 @@
                </div>
             </section>
          <!-- project details area end -->
-
+      <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31914.91149273077!2d130.63193476713235!3d-0.8647221596271405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d5e80b3fbaa477d%3A0x622f6c920ed64eb5!2sPulau%20Batanta!5e0!3m2!1sid!2sid!4v1680713009147!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+<!-- Place map area end -->   
       </main>
 
       <!-- footer area start -->
