--- a/masjid_agung_palembang.html
+++ b/masjid_agung_palembang.html
@@ -218,7 +218,7 @@
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/raja_ampat/waigeo.jpg">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/palembang/masjid_agung_palembang.jpg">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
                <div class="shape-1">
@@ -232,11 +232,11 @@
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Waigeo</h3>
+                           <h3 class="breadcrumb__title">Masjid Agung Palembang</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
                               <span><a href="index.html">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Waigeo</span>
+                              <span>Masjid Agung Palembang</span>
                            </div>
                         </div>
                      </div>
@@ -252,26 +252,24 @@
                      <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
                      data-wow-delay=".3s">
                         <div class="tp-project-details-thumb-1 mb-35">
-                           <img src="assets/img/destination/raja_ampat/waigeo.jpg" alt="">
+                           <img src="assets/img/destination/palembang/masjid_agung_palembang.jpg" alt="">
                         </div>
                      </div>
                   </div>
                   <div class="row">
                      <div class="col-lg-8">
                         <div class="tp-project-details-text mb-50">
-                           <h3 class="tp-project-details-title">Waigeo</h3>
-                            <p>Waigeo Island is an island located in Southwest Papua in eastern Indonesia . This island is also known as Amberi or Waigiu. Waigeo Island is the largest of the four main islands of the Raja Ampat Archipelago . This island is located between Halmahera Island and Papua Island with a distance of about 65 km northwest of Papua Island. The surrounding large islands are Salawati Island , Batanta Island , and Misool Island .</p>
-                            <p>The area of ​​the island is 3155 km², with the highest point at 1000 m. The distance between west to east is about 110 km, and north to south is about 50 km.</p>
-                            <p>Waisai City is located in the southeastern part of the island and is the capital of the Raja Ampat Regency .</p>
+                           <h3 class="tp-project-details-title">Masjid Agung Palembang</h3>
+                            <p>This mosque is influenced by 3 architectures namely Malay , Chinese and European. The typical architectural style of the Archipelago is the pattern of the main building structure having three steps with a pyramid-shaped peak. The third step which is the top of the mosque or mustaka has a ladder carved with tropical flowers. At the end of the mustaka there is a mustika with a broken flower pattern. The shape of the steps of the mosque building was influenced by the basic building of the Hindu-Javanese temple, which was later absorbed by the Great Mosque of Demak. The hallmark of European architecture is found in the form of large and tall mosque windows. The pillars of the mosque are large and give a solid impression. Building materials such as marble and glass are imported directly from Europe. Meanwhile, Chinese architecture is seen from the main mosque whose roof is in the shape of a pyramid, consisting of three levels. At the top of the pyramid side of the roof there are simbar leaf crests resembling curved goat horns. Each side of the pyramid has 13 strands. The shape of the jurai is curved and sharp. This form is the shape of the rooftemple . [2] This mosque used to be the largest mosque in Indonesia for several years. [3] The mosque's current form is the result of a renovation in 2000 and was completed in 2003. Megawati Soekarnoputri was the one who inaugurated this modern giant mosque in South Sumatra.</p>
                         </div>
                      </div>
                      <div class="col-lg-4">
                         <div class="tp-project-details-list">
                            <ul>
-                              <li><span>Destination</span> Waigeo</li>
-                              <li><span>Photo</span> Kemenparekraf</li>
-                              <li><span>Date</span> 26 December 2022</li>
-                              <li><span>Location</span> Raja Ampat</li>
+                              <li><span>Destination</span> Masjid Agung Palembang</li>
+                              <li><span>Photo</span> Wikipedia</li>
+                              <li><span>Date</span> 23 January 2023</li>
+                              <li><span>Location</span> Palembang</li>
                            </ul>
                         </div>
                      </div>
@@ -280,14 +278,14 @@
                </div>
             </section>
          <!-- project details area end -->
-      
+
       <!-- Place map area start -->
       <div class="tp-contact-map-area">
          <div class="container-fluid g-0">
             <div class="row gx-0">
                <div class="col-lg-12">
                   <div class="tp-contact-map">
-                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1021385.686213308!2d130.21917691869737!3d-0.22397228321117746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d5f72b436d7c289%3A0x44fd5546c72ad48c!2sWaigeo!5e0!3m2!1sid!2sid!4v1680712703569!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.3943792426785!2d104.75801431525413!3d-2.9879117406931868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b763fffffffff%3A0x8a4c35280f8447f5!2sSultan%20Mahmud%20Badaruddin%20Jayo%20Wikramo%20Great%20Mosque%20(Great%20Mosque%20of%20Palembang)!5e0!3m2!1sen!2sid!4v1680713748263!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
             </div>
