--- a/pura_tanah_lot.html
+++ b/pura_tanah_lot.html
@@ -282,7 +282,20 @@
                </div>
             </section>
          <!-- project details area end -->
-
+      
+      <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.7371628928126!2d115.08461831744387!3d-8.621213000000012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd237824f71deab%3A0xcaabe270f7e34d69!2sTanah%20Lot!5e0!3m2!1sid!2sid!4v1680712398131!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+<!-- Place map area end -->   
       </main>
 
       <!-- footer area start -->
