--- a/uluwatu_temple.html
+++ b/uluwatu_temple.html
@@ -218,7 +218,7 @@
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/raja_ampat/batanta.png">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/bali/uluwatu_temple.png">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
                <div class="shape-1">
@@ -282,7 +282,20 @@
                </div>
             </section>
          <!-- project details area end -->
-
+      
+      <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3942.5384400757307!2d115.08298341478512!3d-8.82935664365951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd24ffc20cb8191%3A0xcb98d1ba7db0495!2sPura%20Luhur%20Uluwatu!5e0!3m2!1sid!2sid!4v1680712581514!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+<!-- Place map area end -->  
       </main>
 
       <!-- footer area start -->
