--- a/mount_batur.html
+++ b/mount_batur.html
@@ -280,7 +280,19 @@
                </div>
             </section>
          <!-- project details area end -->
-
+      <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31589.02243484518!2d115.35998476890678!3d-8.240129370503558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd1f403c8e8ee3f%3A0xd38045afa18670b4!2sGn.%20Batur!5e0!3m2!1sid!2sid!4v1680712495479!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+<!-- Place map area end -->   
       </main>
 
       <!-- footer area start -->
