--- a/palembang_icon.html
+++ b/palembang_icon.html
@@ -218,7 +218,7 @@
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/raja_ampat/waigeo.jpg">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/palembang/palembang_icon.jpg">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
                <div class="shape-1">
@@ -232,11 +232,11 @@
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Waigeo</h3>
+                           <h3 class="breadcrumb__title">Palembang Icon Mall</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
                               <span><a href="index.html">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Waigeo</span>
+                              <span>Palembang Icon Mall</span>
                            </div>
                         </div>
                      </div>
@@ -252,26 +252,25 @@
                      <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
                      data-wow-delay=".3s">
                         <div class="tp-project-details-thumb-1 mb-35">
-                           <img src="assets/img/destination/raja_ampat/waigeo.jpg" alt="">
+                           <img src="assets/img/destination/palembang/palembang_icon.jpg" alt="">
                         </div>
                      </div>
                   </div>
                   <div class="row">
                      <div class="col-lg-8">
                         <div class="tp-project-details-text mb-50">
-                           <h3 class="tp-project-details-title">Waigeo</h3>
-                            <p>Waigeo Island is an island located in Southwest Papua in eastern Indonesia . This island is also known as Amberi or Waigiu. Waigeo Island is the largest of the four main islands of the Raja Ampat Archipelago . This island is located between Halmahera Island and Papua Island with a distance of about 65 km northwest of Papua Island. The surrounding large islands are Salawati Island , Batanta Island , and Misool Island .</p>
-                            <p>The area of ​​the island is 3155 km², with the highest point at 1000 m. The distance between west to east is about 110 km, and north to south is about 50 km.</p>
-                            <p>Waisai City is located in the southeastern part of the island and is the capital of the Raja Ampat Regency .</p>
+                           <h3 class="tp-project-details-title">Palembang Icon Mall</h3>
+                            <p>Palembang Icon  Or Picon/ PI is the first life style mall in Palembang city managed by Lippo Group, located at Jalan POM IX no.1, Lorok Pakjo Village, Ilir Barat 1 District, Palembang and can be reached easily by public transportation such as Transmusi, City Transportation, etc. This mall was established in 2014. Even though it is still new, this mall has received special attention in the hearts of visitors. Because this mall sells goods that can be said to be Branded and the first in South Sumatra.</p>
+                            <p>This mall consists of 5 floors (GF, UF, 1st, 2nd, 3rd). This mall also stands side by side with the lake which adds to its beauty. It's no joke that there are so many national and international brands that are part of it. Complete with sky dining, it becomes a special attraction, not only that, one of the anchor stores, Cinemaxx is the first studio outside Jabodetabek and the most complete to date, has 8 studios consisting of Regular, Ultra XD and Cinemaxx Gold studios.</p>
                         </div>
                      </div>
                      <div class="col-lg-4">
                         <div class="tp-project-details-list">
                            <ul>
-                              <li><span>Destination</span> Waigeo</li>
-                              <li><span>Photo</span> Kemenparekraf</li>
-                              <li><span>Date</span> 26 December 2022</li>
-                              <li><span>Location</span> Raja Ampat</li>
+                              <li><span>Destination</span> Palembang Icon Mall</li>
+                              <li><span>Photo</span> Palembang.go.id</li>
+                              <li><span>Date</span> 09 Juli 2021</li>
+                              <li><span>Location</span> Palembang</li>
                            </ul>
                         </div>
                      </div>
@@ -280,14 +279,14 @@
                </div>
             </section>
          <!-- project details area end -->
-      
+         
       <!-- Place map area start -->
       <div class="tp-contact-map-area">
          <div class="container-fluid g-0">
             <div class="row gx-0">
                <div class="col-lg-12">
                   <div class="tp-contact-map">
-                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1021385.686213308!2d130.21917691869737!3d-0.22397228321117746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d5f72b436d7c289%3A0x44fd5546c72ad48c!2sWaigeo!5e0!3m2!1sid!2sid!4v1680712703569!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3984.426845059885!2d104.745763!3d-2.978954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwNTgnNDQuMiJTIDEwNMKwNDQnNDQuOCJF!5e0!3m2!1sid!2sid!4v1680713544821!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
             </div>
