--- a/salawati.html
+++ b/salawati.html
@@ -282,6 +282,19 @@
             </section>
          <!-- project details area end -->
 
+         <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31912.484769061204!2d130.84915706714557!3d-1.1166665978694374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d5c3925e97315d7%3A0x3403a680ccd12b11!2sPulau%20Salawati!5e0!3m2!1sid!2sid!4v1680713083782!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+<!-- Place map area end --> 
       </main>
 
       <!-- footer area start -->
