--- a/sendang_gile_waterfall.html
+++ b/sendang_gile_waterfall.html
@@ -218,7 +218,7 @@
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/raja_ampat/waigeo.jpg">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/destination/lombok/sendang_gile_waterfall.png">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
                <div class="shape-1">
@@ -232,11 +232,11 @@
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Waigeo</h3>
+                           <h3 class="breadcrumb__title">Sendang Gile Waterfall</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
                               <span><a href="index.html">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Waigeo</span>
+                              <span>Sendang Gile Waterfall</span>
                            </div>
                         </div>
                      </div>
@@ -252,26 +252,25 @@
                      <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
                      data-wow-delay=".3s">
                         <div class="tp-project-details-thumb-1 mb-35">
-                           <img src="assets/img/destination/raja_ampat/waigeo.jpg" alt="">
+                           <img src="assets/img/destination/lombok/sendang_gile_waterfall.png" alt="">
                         </div>
                      </div>
                   </div>
                   <div class="row">
                      <div class="col-lg-8">
                         <div class="tp-project-details-text mb-50">
-                           <h3 class="tp-project-details-title">Waigeo</h3>
-                            <p>Waigeo Island is an island located in Southwest Papua in eastern Indonesia . This island is also known as Amberi or Waigiu. Waigeo Island is the largest of the four main islands of the Raja Ampat Archipelago . This island is located between Halmahera Island and Papua Island with a distance of about 65 km northwest of Papua Island. The surrounding large islands are Salawati Island , Batanta Island , and Misool Island .</p>
-                            <p>The area of ​​the island is 3155 km², with the highest point at 1000 m. The distance between west to east is about 110 km, and north to south is about 50 km.</p>
-                            <p>Waisai City is located in the southeastern part of the island and is the capital of the Raja Ampat Regency .</p>
+                           <h3 class="tp-project-details-title">Sendang Gile Waterfall</h3>
+                            <p>Sendang Gile Waterfall is a stunning natural wonder located on the island of Lombok in Indonesia. The waterfall is situated in the foothills of Mount Rinjani, the second-highest volcano in Indonesia. The crystal-clear water cascades down from a height of 30 meters, creating a picturesque pool at the base of the waterfall. Surrounded by lush greenery and towering cliffs, Sendang Gile is a popular destination for nature lovers and adventure enthusiasts and easily one of the top waterfalls on Lombok.</p>
+
                         </div>
                      </div>
                      <div class="col-lg-4">
                         <div class="tp-project-details-list">
                            <ul>
-                              <li><span>Destination</span> Waigeo</li>
-                              <li><span>Photo</span> Kemenparekraf</li>
-                              <li><span>Date</span> 26 December 2022</li>
-                              <li><span>Location</span> Raja Ampat</li>
+                              <li><span>Destination</span> Sendang Gile Waterfall</li>
+                              <li><span>Photo</span> Journeyera.com</li>
+                              <li><span>Date</span> November 2021</li>
+                              <li><span>Location</span> Lombok</li>
                            </ul>
                         </div>
                      </div>
@@ -280,14 +279,14 @@
                </div>
             </section>
          <!-- project details area end -->
-      
+
       <!-- Place map area start -->
       <div class="tp-contact-map-area">
          <div class="container-fluid g-0">
             <div class="row gx-0">
                <div class="col-lg-12">
                   <div class="tp-contact-map">
-                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1021385.686213308!2d130.21917691869737!3d-0.22397228321117746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d5f72b436d7c289%3A0x44fd5546c72ad48c!2sWaigeo!5e0!3m2!1sid!2sid!4v1680712703569!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7895.9110811079745!2d116.40149262423643!3d-8.307217226094123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dcdd5ff50d5ce0f%3A0x21a902b2770f8633!2sAir%20Terjun%20Sendang%20Gile!5e0!3m2!1sid!2sid!4v1680714114728!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
             </div>
